Add barcode fetching from local server in Chrome extension (v0.2.3)
- Implemented a polling mechanism in `background.js` to fetch barcodes from `http://localhost:3030/barcode` every second.
- If a new barcode is detected, it is logged to the console.

- Added `host_permissions` to allow fetching data from `http://localhost:3030`.
- Ensured barcode updates are tracked and logged only when a change occurs.

This update allows the Chrome extension to continuously listen for barcode changes from the Rust backend. 🚀

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
-    "manifest_version": 3,
-    "name": "Depo Scraper",
-    "description": "Automates barcode search across multiple depo websites.",
-    "version": "0.1",
-    "permissions": [
-      "tabs",
-      "clipboardRead"
-    ],
-    "background": {
+  "manifest_version": 3,
+  "name": "Depo Scraper",
+  "description": "Automates barcode search across multiple depo websites.",
+  "version": "0.2.3",
+  "permissions": [
+      "tabs"
+  ],
+  "background": {
       "service_worker": "background.js"
-    },
-    "action": {
+  },
+  "host_permissions": [
+      "http://localhost:3030/*"
+  ],
+  "action": {
       "default_popup": "popup.html"
-    }
   }
-  
+}
