Introduce Depo abstract class and organize depo implementations (v0.2.4)
- Introduced a `Depo` abstract class to standardize depo website handling.
- Each depo implementation now extends `Depo` and defines its `url` manually.
- Moved all depo implementations into a new `/depos` folder for better organization.
- Updated `background.js` to use depo classes instead of raw URLs.
- Modified `manifest.json` to support JavaScript modules by adding `"type": "module"` in the background section.
- Ensured each depo class has an `openPage` method to handle page openings.

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "manifest_version": 3,
-  "name": "Depo Scraper",
-  "description": "Automates barcode search across multiple depo websites.",
-  "version": "0.2.3",
-  "permissions": [
-      "tabs"
-  ],
-  "background": {
-      "service_worker": "background.js"
-  },
-  "host_permissions": [
-      "http://localhost:3030/*"
-  ],
-  "action": {
-      "default_popup": "popup.html"
-  }
+    "manifest_version": 3,
+    "name": "Depo Scraper",
+    "description": "Automates barcode search across multiple depo websites.",
+    "version": "0.2.4",
+    "permissions": [
+        "tabs"
+    ],
+    "background": {
+        "service_worker": "background.js",
+        "type": "module"
+    },
+    "host_permissions": [
+        "http://localhost:3030/*"
+    ],
+    "action": {
+        "default_popup": "popup.html"
+    }
 }
