🚀 Release v1.0.0 – Simplified Chrome Extension with Manual Barcode Input
- **Removed Rust dependencies** to make the extension fully self-contained
- **Eliminated clipboard listener** due to Chrome restrictions
- **Added a manual barcode input system** in the popup
  - New **input field** (`Barkod giriniz`) for barcode entry
  - New **"Ara" button** to trigger barcode search
- **Updated background script** to handle barcode searches
- **Refactored Depo classes** to include a `searchBarcode()` method
- **Updated UI elements to Turkish** for better user experience

🔹 **Depo Scraper is now a pure Chrome extension!** 🚀

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,13 @@
 {
     "manifest_version": 3,
     "name": "Depo Scraper",
-    "description": "Automates barcode search across multiple depo websites.",
-    "version": "0.2.6",
-    "permissions": [
-        "tabs"
-    ],
+    "description": "Barkod aramalarını otomatikleştiren Chrome uzantısı.",
+    "version": "1.0.0",
+    "permissions": ["tabs"],
     "background": {
         "service_worker": "background.js",
         "type": "module"
     },
-    "host_permissions": [
-        "http://localhost:3030/*"
-    ],
     "action": {
         "default_popup": "popup.html"
     }
