Refactor barcode search functionality and centralize common logic
- Moved common barcode search logic to the Depo superclass to reduce redundancy.
- Added `name`, `searchAreaQuery`, and `submitButtonQuery` attributes to Depo subclasses for better configuration.
- Updated the depo classes to use the new structure with its own search area and submit button selectors.
- Improved script injection process to fill barcode and trigger submit button click automatically on the correct depo page.
- Updated manifest permissions to include scripting API for injecting content scripts.

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,20 @@
     "manifest_version": 3,
     "name": "Depo Scraper",
     "description": "Barkod aramalarını otomatikleştiren Chrome uzantısı.",
-    "version": "1.0.0",
-    "permissions": ["tabs"],
+    "version": "1.1",
+    "permissions": ["tabs", "scripting"],
+    "host_permissions": [
+        "https://esiparisv2.alliance-healthcare.com.tr/*",
+        "https://b4b.anadoluitriyat.com/*",
+        "https://b2b.anadolupharma.com/*",
+        "https://www.ecza1.com/*",
+        "https://www.farmazon.com.tr/*",
+        "https://www.farmazonrx.com.tr/*",
+        "http://webdepo.nevzatecza.com.tr/*",
+        "https://eticaret.saglikeczadeposu.com/*",
+        "https://webdepo.selcukecza.com.tr/*",
+        "https://www.sentezb2b.com/*"
+    ],
     "background": {
         "service_worker": "background.js",
         "type": "module"
